--- a/app/index.html
+++ b/app/index.html
@@ -31,5 +31,7 @@
         <div id="viewer-container" class="viewer-container"></div>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/storageService.js"></script>
+    <script type="text/javascript" src="scripts/extension/elementDataPanel.js"></script>
     <script type="text/javascript" src="scripts/extension/testExtension.js"></script>
 </body>
