added client wrapper for own Data API

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,8 @@
         <div id="viewer-container" class="viewer-container"></div>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/serviceClient.js"></script>
+    <script type="text/javascript" src="scripts/dataService.js"></script>
     <script type="text/javascript" src="scripts/storageService.js"></script>
     <script type="text/javascript" src="scripts/extension/elementDataPanel.js"></script>
     <script type="text/javascript" src="scripts/extension/testExtension.js"></script>
