save data for selected element

--- a/app/scripts/extension/res/elementDataPanel.html
+++ b/app/scripts/extension/res/elementDataPanel.html
@@ -3,4 +3,7 @@
         <label for="lookup">Data</label>
         <select id="lookup"></select>
     </div>
+    <div>
+        <button id="apply">Apply</button>
+    </div>
 </div>
