initial version of status display

--- a/app/index.html
+++ b/app/index.html
@@ -35,5 +35,6 @@
     <script type="text/javascript" src="scripts/dataService.js"></script>
     <script type="text/javascript" src="scripts/storageService.js"></script>
     <script type="text/javascript" src="scripts/extension/elementDataPanel.js"></script>
+    <script type="text/javascript" src="scripts/extension/elementStatusPanel.js"></script>
     <script type="text/javascript" src="scripts/extension/testExtension.js"></script>
 </body>
